# dota-motivator

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: components.json  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/e2e/: auth.spec.ts  block.spec.ts  dashboard-flows.spec.ts  dashboard.spec.ts  helpers.ts  onboarding-flow.spec.ts  onboarding.spec.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth_listener.rs  dota_process.rs  gsi.rs  lib.rs  main.rs
apps/desktop/src/app/: layout.tsx  router.tsx
apps/desktop/src/shared/lib/: api.ts  auth-storage.ts  (+2 more)
apps/server/: Dockerfile  drizzle.config.ts  package.json  tsconfig.build.json  vitest.config.ts
apps/server/migrations/: 0000_amusing_colleen_wing.sql
apps/server/migrations/meta/: 0000_snapshot.json  _journal.json
apps/server/src/: index.ts
apps/server/src/app/: auth-middleware.ts  container.ts  http-error.ts  index.ts  tokens.ts
docs/architecture/: backend.md  frontend.md
landing/: index.html
specs/: _template.yaml  auth.spec.yaml  balance.spec.yaml  block.spec.yaml  dashboard.spec.yaml  lot-execution.spec.yaml  lot.spec.yaml  match-tracking.spec.yaml  media.spec.yaml  onboarding.spec.yaml  profile.spec.yaml  sphere.spec.yaml  statistics.spec.yaml
(+225 files in other folders)
