[package]
name = "dm-desktop"
version = "0.0.9"
edition = "2021"

[lib]
name = "dm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sysinfo = "0.32"
once_cell = "1.20"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
